[package]
name = "audio_web_cc"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.29"
env_logger = "0.11.8"


axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }

tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
pty-process = { version = "0.5.3", features = ["async"] }
clap = { version = "4.0", features = ["derive", "env"] }

reqwest-websocket = { version = "0.6", features = ["json"] }
