[package]
name = "echokit_terminal"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "echokit_terminal"
path = "src/main.rs"

[[bin]]
name = "echokit_cc"
path = "src/bin/echokit_cc/main.rs"

[dependencies]
log = "0.4.29"
env_logger = "0.11.8"


axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }

tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
pty-process = { version = "0.5.3", features = ["async"] }
clap = { version = "4.5", features = ["derive", "env"] }

reqwest-websocket = { version = "0.6", features = ["json"] }
bytes = "1.11.1"

strip-ansi-escapes = "0.2.1"
reqwest = { version = "0.13.1", features = ["json"] }

linemux = "0.3"

anyhow = "1.0"
